Bug 77760 - FILEOPEN: DOCX Text and Tables switch position (floating table not floated because it contains a footnote, comment 16)
Summary: FILEOPEN: DOCX Text and Tables switch position (floating table not floated be...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0
Keywords: filter:docx
: 113945 (view as bug list)
Depends on:
Blocks: DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2014-04-22 10:19 UTC by Vinaya Mandke
Modified: 2023-08-30 09:54 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
Issue File (11.97 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-04-22 10:20 UTC, Vinaya Mandke
Details
Issue file compared MSO-LO (71.34 KB, image/jpeg)
2016-05-04 10:48 UTC, Timur
Details
Possible another example DOC (61.50 KB, application/vnd.ms-word)
2016-05-04 10:49 UTC, Timur
Details
Possible another example DOCX (30.95 KB, application/vnd.ms-word.document.12)
2016-05-04 10:49 UTC, Timur
Details
MS 2010 "move with text" option screeshoot. (75.58 KB, image/png)
2016-09-23 12:47 UTC, Gülşah Köse
Details
The first example file in Word 16 and Writer (73.66 KB, image/png)
2023-04-28 11:30 UTC, Gabor Kelemen (Collabora)
Details
The second example file in Word 2016 and Writer (110.06 KB, image/png)
2023-04-28 11:31 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vinaya Mandke 2014-04-22 10:19:36 UTC
1. Open the issue file in LO
2. Open the issue file in MS Word 2010

The table in MS Word appears after the text whereas in LO is is before the text.
The issue is that the table is floating with position. LO is not considering the table as floating.
Comment 1 Vinaya Mandke 2014-04-22 10:20:23 UTC
Created attachment 97737 [details]
Issue File
Comment 2 Jorendc 2014-04-22 17:29:02 UTC
Reproducible, tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: 619b4c40da9e85febbb08a3f7cf8aa8d10963fc1
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-04-18_00:07:53

Kind regards,
Joren
Comment 3 Jorendc 2015-05-17 09:25:59 UTC
Still reproducible

LibreOffice Version: 5.0.0.0.alpha1+ (x64)
Build ID: 9d0c51daea67104349cac26de9839afa8baeb099
TinderBox: Win-x86_64@42, Branch:master, Time: 2015-05-15_23:59:35
Locale: nl-BE (nl_BE)

Opening using Word 2010.
Comment 4 Xisco Faulí 2016-04-21 10:29:02 UTC
This issue is still reproducible in

Version: 5.2.0.0.alpha0+
Build ID: 3dca8575d63db50b0120fbff09bbfcd056fa3732
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-04-20_05:07:29
Locale: es-ES (es_ES)
Comment 5 Timur 2016-05-04 10:48:36 UTC
Created attachment 124834 [details]
Issue file compared MSO-LO

I'd say the same "Text from DOC and DOCX shown bellow table" bug happens with file from Bug 39006. I'll attach both DOC and DOCX created in MSO.
Comment 6 Timur 2016-05-04 10:49:25 UTC
Created attachment 124835 [details]
Possible another example DOC
Comment 7 Timur 2016-05-04 10:49:43 UTC
Created attachment 124836 [details]
Possible another example DOCX
Comment 8 Gülşah Köse 2016-09-23 12:47:38 UTC
Created attachment 127573 [details]
MS 2010 "move with text" option screeshoot.
Comment 9 Gülşah Köse 2016-09-23 12:48:11 UTC
Bug stemps from missing table property LibreOffice Writer's table. MSO has a "Move with text" property as screenshot at attach. If there is a table with unchecked "Move with text" in the docx, while LibreOffice import, text position can switch with table.

Tested Microsoft Office 2010 and LibreOffice 5.3 reproducible
Comment 10 Patrick Jaap 2017-11-20 16:38:37 UTC
*** Bug 113945 has been marked as a duplicate of this bug. ***
Comment 11 Timur 2020-10-14 13:40:54 UTC
Repro 7.1+.
Comment 12 QA Administrators 2023-01-12 03:21:11 UTC Comment hidden (obsolete, spam)
Comment 13 Gabor Kelemen (Collabora) 2023-04-28 11:30:27 UTC
Created attachment 186980 [details]
The first example file in Word 16 and Writer

The first example now looks good in master:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9a555d79b3b00793edf1d51a8a7c76b723cc436d
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

after 
https://git.libreoffice.org/core/+/ce3308a926f036b87515b8cd97d2b197063dc77a
Comment 14 Gabor Kelemen (Collabora) 2023-04-28 11:31:52 UTC
Created attachment 186981 [details]
The second example file in Word 2016 and Writer

The second example docx (attachment 124836 [details]) is still bad - this first table is floating in Word, but not in Writer.

Let's focus on that here.
Comment 15 Justin L 2023-08-18 15:31:04 UTC
repro 24.2+ with comment 14's 39006 anformulairechairessud 4-6.docx

Amazing - somehow this table has failed to become floating, even after all of the changes made to float them. I don't see any relevant exceptions...

Block table
<w:tbl>
  <w:tblPr>
    <w:tblpPr w:leftFromText="142" w:rightFromText="142" w:vertAnchor="page"
     w:horzAnchor="margin" w:tblpXSpec="center" w:tblpYSpec="center"/>
    <w:tblW w:w="9322" w:type="dxa"/>
Comment 16 Miklos Vajna 2023-08-21 13:56:21 UTC
It is not converted because it has a footnote and neither Word nor Writer supports footnotes in fly frames (but Word supports it in floating tables). I'll try to see if adding footnote support inside floating tables is something I can do as part of my general floating table work or if it's so problematic that it's better to put it aside. I'm not sure yet.
Comment 17 Commit Notification 2023-08-22 13:20:31 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/56da1d30afe48cc4acd79567052a575e81f8c7a0

tdf#77760 sw floattable: add support for footnotes, doc model

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2023-08-23 07:38:50 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f8e1a62f944e5358fe498008b4ff8701f1e190a0

tdf#77760 sw floattable: add support for footnotes, layout

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2023-08-24 08:19:40 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/178421a6c719dac9c16f220b76292fec16a53f60

tdf#77760 sw floattable: add support for footnotes, DOCX import

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2023-08-25 15:20:40 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c7b59c9484ae6ff88cd8d7017aeb83b02e212c9c

tdf#77760 sw floattable: add support for footnotes, DOC import

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2023-08-30 09:53:31 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/739597df38dcaab0460482e3bc3f18f2471d43ab

tdf#77760 sw floattable: add support for footnotes, UI

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Miklos Vajna 2023-08-30 09:54:44 UTC
This now works on master, I think.