fdo#77760 Calculate table height for Floating Tables

In the issue file on roundtrip, table and text positions interchanged.
This was because the table was not rendered as a floating table in LO.

Added changes to calculate table height iff trHeight is specified for
each and every row in the table, otherwise it will be zero.

Conditions in which Table is considered as Floating: -
- if is ValidHeight AND ValidPosition

- else is (ValidWidth OR ValidPosition) AND calcHeight = 0
  // earlier condition (in case Height is not mentioned)

- else ValidWidth AND ValidHeight // earlier condition

Change-Id: Ibc98974c7dde0ac03ee31c7150f2f664b76b7ad7